Enables status updates for table export requests

--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -77,7 +77,7 @@
             </mat-panel-title>
           </mat-expansion-panel-header> 
 
-          <span style="color: grey">DRAFT TEXT<br/>
+          <span style="color: grey">
             <p>Researchers can export their summarized, aggregated and/or analysis results data, which do not contain sensitive information, to the public Edge database.  
                   This enhances analytical capabilities, enabling connections from the Edge database to local applications and/or other public data sources.</p>
             <p>Users are required to submit initial table export requests, and any subsequent changes to the given table schema, for review and approval by the Data Steward. </p>
