--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -26,7 +26,7 @@
                       <td>{{exportFileRequest.ReqReceivedDate}}</td>
                       <td>{{exportFileRequest.userFullName}}</td>
                       <td>{{exportFileRequest.description}}</td>
-                      <td><div style="word-break:break-all;">{{exportFileRequest.team}}}</div></td>
+                      <td><div style="word-break:break-all;">{{exportFileRequest.team}}</div></td>
                       <td>{{exportFileRequest.dataset}}</td>
                       <!-- <td><a style="cursor:pointer;word-break:break-all;" (click)="requestDownload(exportFileRequest)">{{exportFileRequest.reviewFile}}</a></td> -->
                       <td><div style="word-break:break-all;">{{exportFileRequest.reviewFile}}</div></td>   
