--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -69,7 +69,7 @@
         </div>
         </mat-expansion-panel>
 
-        <!--NEW: Table Export Panel-->
+        <!--Table Export Panel-->
         <mat-expansion-panel style="margin-top: 40px;" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
