Change method name to requestDownloadForReview

--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -49,7 +49,7 @@
                         </td>
                         <td>
                             <!--<i class="material-icons iconFont" (click)="copyFileToTeamBucket(exportFileRequest)">file_copy</i>-->
-                            <i class="material-icons iconFont" (click)="requestDownload2(exportFileRequest)">file_copy</i>                            
+                            <i class="material-icons iconFont" (click)="requestDownloadForReview(exportFileRequest)">file_copy</i>                            
                         </td>
                   </tr>
               </ng-template>
