Minor code clean-up

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -70,7 +70,7 @@
 </div>
 
 
-<!--SDC Datasets Access Request Dialogbox-CVP Dataset->
+<!--SDC Datasets Access Request Dialogbox-CVP Dataset-->
 <!-- <div *ngIf="mailType == 'Access Request Mail' && datasetName == 'CVP'">
   <h4>SDC Data Access Request Form</h4>
   <hr>
