Update FAQ image assets and minor FAQ content clean-up

--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -90,14 +90,14 @@
                     <div  class="padding-top-xxs" id="datasetAccess">
                     <ul>
                         <h4>1) How can I get access to the SDC Datasets?</h4>
-                        <p >Users can request access to the datasets that are available within the SDC platform as published / enabled by the SDC team or published by other users.s</p>
+                        <p >Users can request access to the datasets that are available within the SDC platform as published / enabled by the SDC team or published by other users.</p>
                         <ul class = "outside">
                             <span>
                                 <li class="push-top-30" > Once you are logged in, click on 'DATASETS’ in the top menu.</li>
                                 <img src="../../assets/images/faq_image/Dataset-1.png" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
-                                <li class="push-top-30" >Expand the ‘SDC Datasets’ panel. Below this you can see all available datasets</li>
+                                <li class="push-top-30" >Expand the ‘SDC Datasets’ panel. Below this you can see all available datasets.</li>
                                 <img src="../../assets/images/faq_image/Dataset-2.png" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
@@ -105,7 +105,7 @@
                                 <img src="../../assets/images/faq_image/Dataset-3-newest.png" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
-                                <li class="push-top-30">The SDC Data Access Request Form will pop-up. Complete the form and click ‘Send Request’.</li>
+                                <li class="push-top-30">The 'SDC Data Access Request Form' will pop-up. Complete the form and click ‘Send Request’.</li>
                                 <img src="../../assets/images/faq_image/Dataset-4-noBorder-marked.png" class="mx-auto d-block width-70"  id="img-highlight">
                             </span>
                             <span>
@@ -208,10 +208,10 @@
                                 <li class="push-top-30">Click on DATASETS on the top menu.</li>
                                 <li> Click on Upload Files under 'My Datasets/Algorithm'.</li>
                                 <li> A pop-up window appears prompting you to choose one or more files for upload to the assigned bucket. (The assigned bucket name will be displayed on the upload pop-up window.)</li>                           
-                                <img src="../../assets/images/faq_image/Upload-1-noBorder-marked.png" class="mx-auto d-block width-70" id="img-highlight">
+                                <img src="../../assets/images/faq_image/Upload-1-noBorder-marked2.png" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
-                                <li class="push-top-30">A success message will be displayed upon successful upload.</li>
+                                <li class="push-top-30">Once you have chosen your file(s), click the 'Upload' button.  A success message will be displayed upon successful upload.</li>
                                 <img src="../../assets/images/faq_image/Upload-2-focused.png" class="mx-auto d-block width-70" id="img-highlight">
                             </span>
                             <span>
