--- a/webportal/webapp/src/app/main/home/home.component.html
+++ b/webportal/webapp/src/app/main/home/home.component.html
@@ -16,7 +16,7 @@
                 </mat-card-content>
                 <mat-card-actions>
                     <div class="cardBtn">
-                        <button class="btn-default" [routerLink]="['/about']" style="width: 50%">Learn More</button>
+                        <p-button [routerLink]="['/about']" >Learn More</p-button>
                     </div>
                 </mat-card-actions>
             </mat-card>
