--- a/webportal/webapp/src/styles.css
+++ b/webportal/webapp/src/styles.css
@@ -2,6 +2,11 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~prismjs/themes/prism.css';
 @import '~bootstrap/dist/css/bootstrap.css';
+
+@import "~primeicons/primeicons.css";
+@import "~primeng/resources/themes/lara-light-blue/theme.css";
+@import "~primeng/resources/primeng.min.css";
+
 body { padding-top: 70px; }
 
 html {
