update to primeng theme: Lara; clean up on other files

--- a/webportal/webapp/src/app/main/home/home.component.html
+++ b/webportal/webapp/src/app/main/home/home.component.html
@@ -6,49 +6,46 @@
         </div>
     </div>
 
+    <!-- <section>
+        <p-button [routerLink]="['/register']">Sign up! 
+            <i class="pi pi-arrow-right ml-3"></i>
+        </p-button>
+        <p-button [routerLink]="['/datasetinfo']">Learn More</p-button>
+        <p-splitButton label="Info" [model]="this.items" styleClass="p-button-text p-button-info mr-2 mb-2"></p-splitButton>
+    </section> -->
+    
     <div class="row" style="padding-top: 15px;">
         <div class="col-md-4">
-            <mat-card class="card">
-                <mat-card-title class="cardTitle">About SDC</mat-card-title>
-                <!--<a (click)="internalRoute('home','curated')" style="width: 50%">Learn More</a>-->
-
-                <mat-card-content class="cardContent">The Secure Data Commons is an online analytic portal for transportation researchers. On this portal, researchers can take advantage of pre-established programming environments to access and analyze a growing set of transportation-related data sets.
-                </mat-card-content>
-                <mat-card-actions>
-                    <div class="cardBtn">
-                        <p-button [routerLink]="['/about']" >Learn More</p-button>
-                    </div>
-                </mat-card-actions>
-            </mat-card>
+            <p-card header="About SDC">
+                <p>The Secure Data Commons is an online analytic portal for transportation researchers. On this portal, researchers can take advantage of pre-established programming environments to access and analyze a growing set of transportation-related data sets.
+                </p>
+                <ng-template pTemplate="footer">
+                    <p-button [routerLink]="['/about']" >Learn More</p-button>
+                </ng-template>
+            </p-card>
         </div>
         <div class="col-md-4">
-            <mat-card class="card">
-                <mat-card-title class="cardTitle">Datasets</mat-card-title>
-                <mat-card-content class="cardContent">Check out the list of current datasets that
+            <p-card header="Datasets">
+                <p>Check out the list of current datasets that
                     are available on SDC platform and learn how
                     to get access to those datasets
-                </mat-card-content>
-                <mat-card-actions>
-                    <div class="cardBtn">
-                        <button class="btn-default" [routerLink]="['/datasetinfo']" style="width: 50%">Learn More</button>
-                    </div>
-                </mat-card-actions>
-            </mat-card>
+                </p>
+                <ng-template pTemplate="footer">
+                    <p-button [routerLink]="['/datasetinfo']" >Learn More</p-button>
+                </ng-template>
+            </p-card>
         </div>
         <div class="col-md-4">
-            <mat-card class="card">
-                <mat-card-title class="cardTitle">Sign up</mat-card-title>
-                <mat-card-content class="cardContent">Complete our online
+            <p-card header="Sign up">
+                <p>Complete our online
                     access request form and when you are
                     approved you can begin creating your very
                     own data analysis environments!
-                </mat-card-content>
-                <mat-card-actions>
-                    <div class="cardBtn">
-                        <button class="btn-default" [routerLink]="['/register']" style="width: 50%">Learn More</button>
-                    </div>
-                </mat-card-actions>
-            </mat-card>
+                </p>
+                <ng-template pTemplate="footer">
+                    <p-button [routerLink]="['/register']" >Learn More</p-button>
+                </ng-template>
+            </p-card>
         </div>
     </div>
 </div>
