--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -15,22 +15,22 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="col-md-8" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" style="font-size: 11px">
-          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link"  [routerLink]="['/account/accounthome']">HOME &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active" routerLinkActiveOptions="{exact: true}">
+            <a class="nav-link"  routerLink="/account/accounthome">HOME &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/account/datasets']">DATASETS &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/account/datasets">DATASETS &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']" *ngIf="isDataProvider">
-            <a class="nav-link" [routerLink]="['/account/exportrequests']">EXPORT REQUESTS &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active" *ngIf="isDataProvider">
+            <a class="nav-link" routerLink="/account/exportrequests">EXPORT REQUESTS &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/account/workstation']">WORKSTATIONS &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/account/workstation">WORKSTATIONS &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/account/faq']">FAQ &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/account/faq">FAQ &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
+          <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" style="cursor: pointer" (click)="userLogout()">LOGOUT</a>
           </li>
 
