--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -8,24 +8,24 @@
         <!--</a>-->
         <div style=" float: left;width: 85%;padding: 18px 0px;margin-left: -15px; cursor: pointer ">
           <!--<span style="font-weight: 700;">U.S. Department of Transportation</span><br/>-->
-          <span class="logo" [routerLink]="['/home']">Secure Data Commons Platform</span>
+          <span class="logo" routerLink="/home">Secure Data Commons Platform</span>
         </div>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="col-md-8" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" style="font-size: 11px">
-          <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-            <a class="nav-link" [routerLink]="['/about']">ABOUT &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active" routerLinkActiveOptions="{exact: true}">
+            <a class="nav-link" routerLink="/about">ABOUT &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/datasetinfo']">DATASETS &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/datasetinfo">DATASETS &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/register']">REGISTER / LOGIN &emsp; &nbsp;|</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/register">REGISTER / LOGIN &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/faqs']">FAQs</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/faqs">FAQs</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
