Clean-up p-cards on Home Component, layout of Register Component, 2 typos.

--- a/webportal/webapp/src/app/main/faq/faq.component.html
+++ b/webportal/webapp/src/app/main/faq/faq.component.html
@@ -49,7 +49,7 @@
                             <p>User requests access to the SDC system via submitting the required information on the access request form. User access request forms will be stored for the duration of the contract.</p>
                             <p class="push-top-30"><b>Step 2 – Access Request Review</b></p>
                             <p>After reviewing the request, SDC Support Team will: 
-                                <li>Creates a user name and password for the user within 24 hours of the request.</li>
+                                <li>Create a user name and password for the user within 24 hours of the request.</li>
                                 <li>Provision a standard workstation based on the user preferences (unless unique tools are requested by the user - see Step 5 for details).</li>
                                 <li>Provision any back-end services (such as S3 buckets) needed.</li>
                             </p>
