--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <mat-card class="info">
+    <mat-card appearance="outlined" class="info">
         <div class="row">
                 <!--mat-expansion-panel style="margin-top: 40px;" [expanded]="true"-->
                 <h3>Helpful Links</h3>
