--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="container" style="width:1278px;">
-  <mat-card>
+  <mat-card appearance="outlined">
     <div class="row" style="width:1200px;">
       <h3>My Workstations</h3>
         <span>Workstations are Windows or linux Virtual Machines (VMs), which provide a mechanism for SDC users to access the datasets assigned to them or their own datasets, and perform analytics on the data</span><hr>
