--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card>
+  <mat-card appearance="outlined">
     <div class="row row-divided">
       <div class="col-xs-6 column-one">
         <div class="sign-in-container">
