--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -1061,29 +1061,27 @@
 </div>
 
 <div *ngIf="requestType == 'Upload Files To S3'">
-  <h4>Upload files to SDC platform</h4>
-  <hr>
-  <div *ngIf="!uploadNotice">
-    <p><b>IMPORTANT: Users cannot upload PII or CBI data on their own. If you would like to upload data containing PII
-        or CBI, you must contact the SDC Support Desk so that the request and its associated data can be tracked
-        appropriately.</b></p>
-    <div>
-      <button class="btn btn-primary dotBtn upload-okayBtn" (click)="onOkayUploadClick()">OKAY</button>
-      <button class="btn btn-primary dotBtn upload-cancelBtn" (click)="onNoClick()">CANCEL</button>
+  <p-card header="Upload files to SDC platform">
+    <div *ngIf="!uploadNotice">
+      <p>IMPORTANT: Users cannot upload PII or CBI data on their own. If you would like to upload data containing PII or CBI, you must contact the SDC Support Desk so that the request and its associated data can be tracked appropriately.
+      </p>
+      <div>
+        <button class="btn btn-primary dotBtn upload-okayBtn" (click)="onOkayUploadClick()">OKAY</button>
+        <button class="btn btn-primary dotBtn upload-cancelBtn" (click)="onNoClick()" [style]="{ 'margin-left': '.5em' }">CANCEL</button>
+      </div>
     </div>
-  </div>
-  <div *ngIf="uploadNotice">
-    <p>Files will be uploaded to the bucket - <b>{{ userBucketName }}</b></p>
-
-    <p-fileUpload #fileUpload name="selectedFiles[]" customUpload="true" (uploadHandler)="uploadFiles($event)"
+    <div *ngIf="uploadNotice">
+      <p>Files will be uploaded to the bucket - <b>{{ userBucketName }}</b></p>
+      <p-fileUpload #fileUpload name="selectedFiles[]" customUpload="true" (uploadHandler)="uploadFiles($event)"
       multiple="multiple">
-      <ng-template pTemplate="content">
-        <ul *ngIf="selectedFiles.length">
-          <li *ngFor="let file of selectedFiles"><b> Uploaded {{file.name}} - {{file.size}} bytes </b> </li>
-        </ul>
-      </ng-template>
-    </p-fileUpload>
+        <ng-template pTemplate="content">
+          <ul *ngIf="selectedFiles.length">
+            <li *ngFor="let file of selectedFiles"><b> Uploaded {{file.name}} - {{file.size}} bytes </b> </li>
+          </ul>
+        </ng-template>
+      </p-fileUpload>
   </div>
+  </p-card>
 </div>
 
 
