--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <mat-card>
+    <mat-card appearance="outlined">
      <div class="row">
         <div class="col-md-12">
           <!-- Export Requests-->
