--- a/webportal/webapp/src/app/main/about/about.component.html
+++ b/webportal/webapp/src/app/main/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <mat-card class="info">
+    <mat-card appearance="outlined" class="info">
         <div class="row">
             <h3>About</h3>
             <mat-card-content>
