--- a/webportal/webapp/src/app/main/faq/faq.component.html
+++ b/webportal/webapp/src/app/main/faq/faq.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <mat-card class="info">
+    <mat-card appearance="outlined" class="info">
         <div class="row">
             <h3>Frequently Asked Questions</h3>
             <mat-card-content>
