--- a/webportal/webapp/src/app/main/home/home.component.html
+++ b/webportal/webapp/src/app/main/home/home.component.html
@@ -20,7 +20,7 @@
                 <p>The Secure Data Commons is an online analytic portal for transportation researchers. On this portal, researchers can take advantage of pre-established programming environments to access and analyze a growing set of transportation-related data sets.
                 </p>
                 <ng-template pTemplate="footer">
-                    <p-button routerLink="/about" >Learn More</p-button>
+                    <p-button class="pcardBtn"  routerLink="/about" >Learn More</p-button>
                 </ng-template>
             </p-card>
         </div>
@@ -31,12 +31,12 @@
                     to get access to those datasets
                 </p>
                 <ng-template pTemplate="footer">
-                    <p-button routerLink="/datasetinfo" >Learn More</p-button>
+                    <p-button class="pcardBtn" routerLink="/datasetinfo" >Learn More</p-button>
                 </ng-template>
             </p-card>
         </div>
         <div class="col-md-4">
-            <!--p-card class = pcard header="Sign up"-->
+            <!--p-card class="pcard" header="Sign up"-->
             <p-card header="Sign up"  [style]="{height: '300px' }">
                 <p>Complete our online
                     access request form and when you are
@@ -44,7 +44,7 @@
                     own data analysis environments!
                 </p>
                 <ng-template pTemplate="footer">
-                    <p-button routerLink="/register" >Learn More</p-button>
+                    <p-button class="pcardBtn" routerLink="/register" >Learn More</p-button>
                 </ng-template>
             </p-card>
         </div>
